Lab6_Ryder Cook/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;E:\Problem Solving and Programming\Lab Assignments\Lab Assignment 6\Lab Assignment 6
-d
E:\Problem Solving and Programming\Lab Assignments\Lab Assignment 6\Lab Assignment 6\doc
-encoding
UTF-8
-charset
UTF-8
E:\Problem Solving and Programming\Lab Assignments\Lab Assignment 6\Lab Assignment 6\CompareStrings.java
<---- end of javadoc command ---->
Loading source file E:\Problem Solving and Programming\Lab Assignments\Lab Assignment 6\Lab Assignment 6\CompareStrings.java...
E:\Problem Solving and Programming\Lab Assignments\Lab Assignment 6\Lab Assignment 6\CompareStrings.java:32: error: not a statement
               System.out.printlnString);
                         ^
E:\Problem Solving and Programming\Lab Assignments\Lab Assignment 6\Lab Assignment 6\CompareStrings.java:32: error: ';' expected
               System.out.printlnString);
                                       ^
2 errors
